--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -38,8 +38,8 @@ table {
 /* Commun CSS */
 :root {
     --black: #221824;
-    --violet: #a100bb;
-    --violet-light: #a885ab;
+    --violet: #DD06FF;
+    --violet-light: #FF69FF;
     --grey-light: #eaeef7;
     --grey-deep: #6b82ac;
     --white-light: #fff5ff;
@@ -66,18 +66,26 @@ body {
 	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
+
 .nav ul {
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
 .nav {
     width: 100%;
-    max-width: 300px;
-    margin: 0 0 0 40px;
+    /* max-width: 800px; */
+    /* margin: 0 0 0 40px; */
 }
-
-.btn {
+.left{
+    display: flex;
+    align-items: flex-end;
+}
+.right{
+    display: flex;
+}
+/* .btn {
 	width: 200px;
 	font-weight: 600;
 	color: #fff;
@@ -92,9 +100,9 @@ body {
 	border: 1px solid;
 	padding: 10px;
 	border-radius: 50px;
-}
+} */
 
-.btn:hover {
+/* .btn:hover {
 	background-position: 100% 0;
 	-webkitz-transition: all .4s ease-in-out;
 	-webkit-transition: all .4s ease-in-out;
@@ -102,15 +110,15 @@ body {
 	-o-transition: all .4s ease-in-out;
 	-webkit-transition: all .4s ease-in-out;
 	transition: all .4s ease-in-out;
-}
+} */
 
 .btn:focus {
 	outline: none;
 }
 
 .btn.color-1 {
-	background-image: linear-gradient(to right, var(--violet) 0%, var(--grey-deep) 100%);
-	box-shadow: 0 4px 15px 0 var(--violet);
+	/* background-image: linear-gradient(to right, var(--violet) 0%, var(--grey-deep) 100%); */
+	/* box-shadow: 0 4px 15px 0 var(--violet); */
 }
 
 
@@ -129,9 +137,41 @@ header {
     color: var(--black);
 }
 .nav a.btn {
-    color: var(--white-light);
+    /* color: var(--white-light); */
 }
 .nav a:hover {
     font-weight: bold;
     transition: .5s;
+}
+
+
+/* FOOTER ================================================ */
+.footer-container{
+    display: flex;
+    justify-content: space-around;
+}
+.link-footer{
+    display: flex;
+    flex-direction: column;
+}
+.title-footer{
+    margin-bottom: 15px;
+}
+.color-black{
+    color: var(--black);
+}
+.fab{
+    cursor: pointer;
+}
+.fa-twitter{
+    color: #6CADDE!important;
+}
+.fa-facebook-f{
+    color: #3b5998!important;
+}
+.fa-instagram{
+color: var(--violet);
+}
+.fa-instagram-square{
+    color: var(--violet);
 }
