--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -190,29 +190,31 @@ header {
     display: flex;
     flex-direction: column;
 }
-
-.title-footer {
-    margin-bottom: 15px;
+.title-footer{
+    font-size: 1.5em;
+    font-weight: bold;
 }
-
-.color-black {
+.color-black{
     color: var(--black);
+    margin-bottom: 15px;
 }
 
 .fab {
     cursor: pointer;
+    font-size: 1.5em;
+    padding-right: 10px;
 }
-
 .fa-twitter {
     color: #6CADDE!important;
 }
-
 .fa-facebook-f {
     color: #3b5998!important;
 }
-
-.fa-instagram {
-    color: var(--violet);
+.fa-instagram{
+color: #8134AF !important;
+}
+.fa-linkedin-in{
+    color: #0072b1!important;
 }
 
 
