--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -35,7 +35,12 @@ table {
     border-spacing: 0;
 }
 
+*, :after, :before {
+    box-sizing: border-box;
+}
+
 /* Commun CSS */
+
 :root {
     --black: #221824;
     --violet: #a100bb;
@@ -43,7 +48,18 @@ table {
     --grey-light: #eaeef7;
     --grey-deep: #6b82ac;
     --white-light: #fff5ff;
-  }
+    --white: #fff;
+    --grey: #adbdcc;
+    --blue-primary: #0a2540;
+    --blue-secondary: #00d4ff;
+    --green: #8bff96;
+    --red: #ff6b6b;
+    --light: 300;
+    --regular: 400;
+    --semi-bold: 500;
+    --bold: 700;
+    --columnCountMax: 4;
+}
 
 a {
     text-decoration: none;
@@ -55,15 +71,15 @@ body {
 }
 
 ::-webkit-scrollbar {
-	width: 6px;
+    width: 6px;
 }
 
 ::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
 ::-webkit-scrollbar-thumb {
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
 .nav ul {
@@ -78,43 +94,43 @@ body {
 }
 
 .btn {
-	width: 200px;
-	font-weight: 600;
-	color: #fff;
-	text-align: center;
-	border: none;
-	background-size: 300% 100%;
-	border-radius: 50px;
-	-webkit-transition: all .4s ease-in-out;
-	-o-transition: all .4s ease-in-out;
-	-webkit-transition: all .4s ease-in-out;
-	transition: all .4s ease-in-out;
-	border: 1px solid;
-	padding: 10px;
-	border-radius: 50px;
+    width: 200px;
+    font-weight: 600;
+    color: #fff;
+    text-align: center;
+    border: none;
+    background-size: 300% 100%;
+    border-radius: 50px;
+    -webkit-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+    border: 1px solid;
+    padding: 10px;
+    border-radius: 50px;
 }
 
 .btn:hover {
-	background-position: 100% 0;
-	-webkitz-transition: all .4s ease-in-out;
-	-webkit-transition: all .4s ease-in-out;
-	-webkit-transition: all .4s ease-in-out;
-	-o-transition: all .4s ease-in-out;
-	-webkit-transition: all .4s ease-in-out;
-	transition: all .4s ease-in-out;
+    background-position: 100% 0;
+    -webkitz-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
 }
 
 .btn:focus {
-	outline: none;
+    outline: none;
 }
 
 .btn.color-1 {
-	background-image: linear-gradient(to right, var(--violet) 0%, var(--grey-deep) 100%);
-	box-shadow: 0 4px 15px 0 var(--violet);
+    background-image: linear-gradient(to right, var(--violet) 0%, var(--grey-deep) 100%);
+    box-shadow: 0 4px 15px 0 var(--violet);
 }
 
-
 /*  */
+
 header {
     width: 100%;
     max-width: 1440px;
@@ -128,10 +144,275 @@ header {
 .nav a {
     color: var(--black);
 }
+
 .nav a.btn {
     color: var(--white-light);
 }
+
 .nav a:hover {
     font-weight: bold;
     transition: .5s;
+}
+
+/* MODAL */
+
+.modal-wrapper {
+    position: fixed;
+    z-index: 50;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    pointer-events: none;
+    -webkit-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
+}
+
+.modal-wrapper.active {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    opacity: 1;
+    pointer-events: initial;
+    -webkit-transition: opacity 0;
+    -o-transition: opacity 0;
+    transition: opacity 0;
+}
+
+.modal-wrapper.active .modal-content {
+    -webkit-animation-name: backInDown;
+    animation-name: backInDown;
+}
+
+.modal-close {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    cursor: pointer;
+    -webkit-transition: all .2s;
+    -o-transition: all .2s;
+    transition: all .2s;
+    color: var(--blue-primary);
+}
+
+.modal-close:hover {
+    opacity: .6;
+}
+
+.modal-header {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 1rem;
+    border-bottom: 1px solid #dee2e6;
+    border-top-left-radius: calc(.5rem - 1px);
+    border-top-right-radius: calc(.5rem - 1px);
+}
+
+.modal-login {
+    display: flex;
+    width: 400px;
+}
+
+.modal-register {
+    display: none;
+}
+
+.modal-body {
+    position: relative;
+    flex: 1 1 auto;
+    padding: 1rem;
+}
+
+.modal-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    pointer-events: auto;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, .2);
+    border-radius: .5rem;
+    outline: 0;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: calc(1.6em + .75rem + 2px);
+    padding: .375rem 1rem;
+    font-size: .9rem;
+    font-weight: 400;
+    line-height: 1.6;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .3rem;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.mb-3, .my-3 {
+    margin-bottom: 1rem!important;
+}
+
+.p-4 {
+    padding: 1.5rem!important;
+}
+
+.btn-modal {
+    display: inline-block;
+    font-weight: 400;
+    color: #212529;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: .375rem 1rem;
+    font-size: .9rem;
+    line-height: 1.6;
+    border-radius: .5rem;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.btn-secondary, .dg-btn--ok {
+    color: #212529;
+    background-color: #ff8a6d;
+    border-color: #ff8a6d;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+.justify-content-end {
+    justify-content: flex-end!important;
+}
+
+.mt-3, .my-3 {
+    margin-top: 1rem!important;
+}
+
+.col {
+    flex-basis: 0;
+    flex-grow: 1;
+    max-width: 100%;
+}
+
+.text-center {
+    text-align: center!important;
+}
+
+.pt-3, .py-3 {
+    padding-top: 1rem!important;
+}
+
+.btn-block {
+    display: block;
+    width: 100%;
+}
+
+.choose-type button {
+    position: relative;
+    color: #FFF;
+    border: none;
+    background-size: cover;
+    background-position: center;
+}
+
+.choose-type button:before {
+    content: "";
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    position: absolute;
+    background-color: rgba(255, 138, 109, 0.8);
+    border-radius: 0.3rem;
+}
+
+.mb-2, .my-2 {
+    margin-bottom: .5rem!important;
+}
+
+.pt-4, .py-4 {
+    padding-top: 1.5rem!important;
+}
+
+.pb-4, .py-4 {
+    padding-bottom: 1.5rem!important;
+}
+
+.modal-register {
+    width: 500px;
+}
+
+#modal-parent {
+    display: none;
+}
+
+.choose-type button h6 {
+    position: relative;
+}
+
+.small, small {
+    font-size: 80%;
+    font-weight: 400;
+}
+
+.h4, h4 {
+    font-size: 1.35rem;
+}
+
+.choose-type button.parent {
+    background-image: url(/mvc/Kidsnap/KidsNap/base_mvc/public/asset/image/register-parent.jpg);
+}
+
+.choose-type button.babysitter {
+    background-image: url(/mvc/Kidsnap/KidsNap/base_mvc/public/asset/image/register-babysitter.jpg);
+}
+
+.text-secondary {
+    color: #ff8a6d!important;
+}
+
+.text-uppercase {
+    text-transform: uppercase!important;
+}
+
+.btn-outline-secondary2 {
+    color: #ff8a6d;
+    border-color: #ff8a6d;
+}
+
+.btn-group-sm>.btn, .btn-sm {
+    padding: .25rem .7rem;
+    font-size: .7875rem;
+    line-height: 1.5;
+    border-radius: .3rem;
+}
+
+#modal-baby {
+    display: none;
+}
+
+.modal-lost_password {
+    display: none;
 }
