--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -199,7 +199,7 @@ header {
     flex-direction: column;
 }
 .title-footer{
-    font-size: 1.5em;
+    font-size: 1.5625em;
     font-weight: bold;
 }
 .color-black{
@@ -317,4 +317,25 @@ color: #8134AF !important;
     width: 50%;
 }
 /* END MAP */
+h2{
+    text-align: center;
+    font-size:  1.875em;
+    font-weight: 500;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.nous{
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 50px;
+}
 
+.btn-job{
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+.go{
+   padding-left: 20px;
+   padding-right: 20px;
+} 
