--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -46,7 +46,6 @@ table {
     --grey-deep: #6b82ac;
     --white-light: #fff5ff;
     --white-cream: #fef0e8;
-
 }
 
 a {
@@ -54,15 +53,15 @@ a {
 }
 
 html, body {
-    font-size: 1em;
+    /* font-size: 1em; */
     font-family: 'Montserrat', sans-serif;
     height: 100%;
     margin: 0;
 }
 
 .wrap {
-    max-width: 1950px;
-    width: 100%;
+    /* max-width: 1950px;
+    width: 100%; */
     margin: 0 auto;
     min-height: 100%;
     margin-bottom: -50px;
@@ -119,7 +118,7 @@ html, body {
 
 .btn.color-1 {
     background-image: linear-gradient(to right, var(--violet) 0%, var(--grey-deep) 100%);
-    box-shadow: 0 4px 15px 0 var(--violet);
+    /* box-shadow: 0 4px 15px 0 var(--violet); */
 }
 
 .margin-left {
@@ -133,6 +132,20 @@ html, body {
 h1 {
     font-size: 35px;
     font-weight: 600;
+}
+
+h2 {
+    font-size: 30px;
+    font-weight: 500;
+}
+
+h3 {
+    font-weight: 400;
+    font-size: 20px;
+}
+
+i {
+    color: var(--violet-light);
 }
 
 /* End Commun CSS */
@@ -198,11 +211,13 @@ header {
     display: flex;
     flex-direction: column;
 }
-.title-footer{
+
+.title-footer {
     font-size: 1.5em;
     font-weight: bold;
 }
-.color-black{
+
+.color-black {
     color: var(--black);
     margin-bottom: 15px;
 }
@@ -212,19 +227,22 @@ header {
     font-size: 1.5em;
     padding-right: 10px;
 }
+
 .fa-twitter {
     color: #6CADDE!important;
 }
+
 .fa-facebook-f {
     color: #3b5998!important;
 }
-.fa-instagram{
-color: #8134AF !important;
-}
-.fa-linkedin-in{
-    color: #0072b1!important;
+
+.fa-instagram {
+    color: #8134AF !important;
 }
 
+.fa-linkedin-in {
+    color: #0072b1!important;
+}
 
 /* END FOOTER */
 
@@ -271,6 +289,7 @@ color: #8134AF !important;
     color: var(--white-light);
     margin-bottom: 20px;
 }
+
 .txtContent p {
     color: var(--black);
     font-size: 25px;
@@ -286,6 +305,7 @@ color: #8134AF !important;
     border-radius: 5px;
     margin-top: 25px;
 }
+
 .inputSelect input, .inputSelect select {
     background-color: var(--pink-light);
     padding: 10px 10px;
@@ -295,7 +315,7 @@ color: #8134AF !important;
     font-size: 20px;
 }
 
-.inputSelect input#submitted{
+.inputSelect input#submitted {
     background-color: var(--violet);
     color: var(--white-light);
     font-size: 18px;
@@ -306,15 +326,169 @@ color: #8134AF !important;
 /* END SECTION BANNER */
 
 .first {
-    background-color: rgba(0, 0, 0, 0.3);
     height: 700px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 80px 0;
 }
 
+.first h2 {
+    width: 349px;
+    margin: 0 auto;
+}
+
+#firstContent {
+    max-width: 1440px;
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 40px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.select-category {
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+}
+
+.content-category {
+    width: 70%;
+}
+
+.firstContent h1 {
+    font-size: 10rem;
+    z-index: 0;
+    opacity: .3;
+}
+
+.select-category button {
+    width: 250px;
+    font-size: 1.1rem;
+    letter-spacing: 1px;
+    background-color: #fff;
+    outline: none;
+    cursor: pointer;
+    padding: 5px 5px;
+    border: none;
+    margin-bottom: 15px;
+    font-weight: 300;
+}
+
+div[class^='category-'] {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.fullContent {
+    display: flex;
+    flex-direction: column;
+}
+
+div[class^='category-'] img {
+    width: 35%;
+}
+
+div[class^='category-'] a {
+    padding: 11px 12px;
+    border: 1px solid var(--black);
+    width: fit-content;
+    border-radius: 10px;
+    margin-left: 80px;
+    color: var(--black);
+}
+
+.txtImg {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.txtCat {
+    width: 60%;
+}
+
+.txtCat h3 {
+    margin-bottom: 15px;
+}
+
+.txtCat p {
+    margin-bottom: 20px;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 140%;
+}
+
+.fullContent .community {
+    color: var(--white-light);
+    background-color: var(--violet);
+    border: none;
+    background-image: linear-gradient(to right, var(--violet) 0%, var(--grey-deep) 100%);
+}
+
+.select-category .active {
+    font-weight: 400;
+}
+
+button.active {
+    background: #fff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
+
+div.hideCategory {
+    display: none;
+}
+
+.pinkStats {
+    width: 100%;
+    height: 149px;
+    background-color: var(--pink-light);
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.boxStats {
+    width: 235px;
+    height: 91px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+
+.boxStats p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+    font-size: 22px;
+    font-weight: 300;
+    text-transform: uppercase;
+}
+
+.boxStats img {
+    margin-right: 20px;
+    width: 20%;
+}
+
+/* .boxStats .fa-users,.boxStats .fa-handshake {
+    color: var(--black);
+    font-size: 30px;
+} */
 
 /* MAP */
+
 #map {
     height: 400px;
     width: 50%;
 }
-/* END MAP */
 
+/* END MAP */
