--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -342,6 +342,7 @@ header {
 
 /* END SECTION BANNER */
 
+/* START SECTION FIRST */
 .first {
     height: 700px;
     width: 100%;
@@ -495,7 +496,10 @@ div.hideCategory {
     margin-right: 20px;
     width: 20%;
 }
+/* END SECTION FIRST */
 
+/* START SECTION SECOND */
+/*  SECTION SECOND */
 /* MAP */
 
 #map {
