--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -100,8 +100,6 @@ html, body {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
-
-
 .btn {
     width: 200px;
     font-weight: 600;
@@ -229,7 +227,7 @@ header {
     flex-direction: column;
 }
 
-.title-footer{
+.title-footer {
     font-size: 1.5625em;
     font-weight: bold;
 }
@@ -343,6 +341,7 @@ header {
 /* END SECTION BANNER */
 
 /* START SECTION FIRST */
+
 .first {
     height: 700px;
     width: 100%;
@@ -363,6 +362,8 @@ header {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+    /* height: 100vh;
+    z-index: 1; */
 }
 
 .select-category {
@@ -496,10 +497,90 @@ div.hideCategory {
     margin-right: 20px;
     width: 20%;
 }
+
 /* END SECTION FIRST */
 
 /* START SECTION SECOND */
+
 /*  SECTION SECOND */
+
+/* START SECTION THIRD */
+
+.third {
+    height: 370px;
+    position: relative;
+    z-index: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.vector-third {
+    width: 100%;
+    position: absolute;
+    z-index: 1;
+    /* à 50%/50% du parent référent */
+    top: 50%;
+    left: 50%;
+    /* décalage de 50% de sa propre taille */
+    transform: translate(-50%, -50%);
+}
+
+.vector-third img {
+    width: fit-content;
+}
+
+.card {
+    width: 387px;
+    height: auto;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    position: relative;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 20px;
+}
+
+.wrapCard {
+    width: 339px;
+    height: auto;
+}
+
+.infoCard {
+    width: 170px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.detailInfo {
+    line-height: 20px;
+}
+
+.contentCard {
+    padding-top: 20px;
+    line-height: 24.28px;
+}
+
+.showContent1 {
+    display: none;
+}
+.showContent2 {
+    display: none;
+}
+.showContent3 {
+    display: none;
+}
+
+.contentCard a {
+    color: var(--violet);
+    cursor: pointer;
+}
+/*  SECTION THIRD */
+
 /* MAP */
 
 #map {
@@ -508,29 +589,31 @@ div.hideCategory {
 }
 
 /* END MAP */
-h2{
+
+h2 {
     text-align: center;
-    font-size:  1.875em;
+    font-size: 1.875em;
     font-weight: 500;
     margin-top: 50px;
     margin-bottom: 50px;
 }
-.nous{
+
+.nous {
     display: flex;
     justify-content: space-around;
     margin-bottom: 50px;
 }
 
-
-.btn-job{
+.btn-job {
     text-align: center;
     margin-top: 100px;
     margin-bottom: 100px;
 }
-.go{
-   padding-left: 20px;
-   padding-right: 20px;
-} 
+
+.go {
+    padding-left: 20px;
+    padding-right: 20px;
+}
 
 /* MODAL */
 
