--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -275,11 +275,14 @@ i {
 
 header {
     width: 100%;
-    max-width: 1308px;
+    
     margin: 0 auto;
     display: flex;
     align-items: center;
     padding: 15px 0 15px 0;
+    background-color: var(--white);
+    position: relative;
+    z-index: 10;
 }
 
 .nav a {
@@ -299,15 +302,22 @@ header {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .nav {
     width: 100%;
+    max-width: 1308px;
+    margin: 0 auto;
+    /* display: flex;
+    justify-content: space-between; */
 }
 
 .left {
+    width: 319px;
     display: flex;
-    align-items: flex-end;
+    align-items: center;
+    justify-content: space-around;
     padding-left: 30px;
 }
 
@@ -1084,9 +1094,10 @@ h4 {
 
 
 /* FORMULAIRE ==============================*/
-.third{
+.fourth{
     height: 100%;
     padding: 50px 30px;
+    position: relative;
 }
 .img-vector{
     position: absolute;
@@ -1139,7 +1150,9 @@ h4 {
     text-align: center;
     margin: 20px 0 50px;
 }
-
+#formcontact{
+    padding: 10px;
+}
 label {
     display: flex;
     flex-direction: column;
@@ -1147,19 +1160,22 @@ label {
 }
 
 input {
-    width: 922px;
+    width: 100%;
     height: 44px;
-    border: none;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
     border-radius: 10px;
-    box-shadow: inset 3px 3px lightgrey;
     margin-bottom: 20px;
 }
 
 textarea {
-    width: 85%;
+    width: 100%;
     height: 150px;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
     border-radius: 10px;
-    border: none;
     margin-bottom: 30px;
     resize: none;
     text-align: center;
@@ -1168,7 +1184,6 @@ textarea {
     -o-transition: 0.7s;
     transition: 0.7s;
     height: 200px;
-    box-shadow: inset 3px 3px lightgrey;
     font-size: 15px;
 }
 
