--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -138,6 +138,11 @@ html, body {
     /* box-shadow: 0 4px 15px 0 var(--violet); */
 }
 
+.btn.color-2 {
+    background-image: linear-gradient(to right, var(--blue-btn) 0%, var(--grey-deep) 100%);
+    /* box-shadow: 0 4px 15px 0 var(--violet); */
+}
+
 .margin-left {
     margin-left: 20px;
 }
@@ -163,6 +168,10 @@ h3 {
 
 i {
     color: var(--violet-light);
+}
+
+input:focus, textarea:focus, select:focus, button:focus {
+    outline: none;
 }
 
 /* End Commun CSS */
@@ -646,10 +655,10 @@ div.hideCategory {
 
 /* MAP */
 
-#map {
+/* #map {
     height: 400px;
     width: 50%;
-}
+} */
 
 /* END MAP */
 
@@ -970,8 +979,264 @@ h2 {
     font-weight: 400;
     color: var(--violet);
 }
+
 #mentions strong {
     font-weight: 500;
 }
 
 /* SECTION MENTIONS */
+
+/* DASHBOARD PARENTS */
+
+.dashboardParents {
+    height: 100vh;
+}
+
+.headParents {
+    height: 288px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+}
+
+.headParents img {
+    position: absolute;
+    width: 100%;
+    height: 70px;
+    text-align: center;
+    top: 0;
+}
+
+.btnParents {
+    width: 546px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.btnParents a {
+    padding: 16px 12px;
+}
+
+.btnParents1 {
+    width: 240px;
+}
+
+.btnParents2 {
+    width: 286px;
+}
+
+/* DASHBOARD PARENTS */
+
+/* MAP */
+
+.searchParents {
+    height: 100vh;
+}
+
+.headSearch {
+    height: 125px;
+    position: relative;
+}
+
+.headSearch img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    top: 0;
+    z-index: -1;
+}
+
+.boxHead {
+    width: 1312px;
+    color: var(--white);
+    margin: 0 auto;
+    padding: 20px 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.boxHead h3 {
+    margin-bottom: 10px;
+}
+
+.boxHead input, button {
+    width: 225px;
+    height: 45px;
+    background: #FFFFFF;
+    border: 1px solid #A8A8A8;
+    box-sizing: border-box;
+    border-radius: 30px;
+    padding-left: 20px;
+    font-size: 16px;
+}
+
+.boxHead button {
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    padding-left: 5px;
+}
+
+.contentSearch {
+    width: 1312px;
+    margin: 0 auto;
+    height: auto;
+}
+
+.contentSearch h4 {
+    font-weight: 500;
+    font-size: 18px;
+    margin: 10px 0;
+}
+
+.partnerTitle {
+    width: 40%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.label {
+    display: inline-flex;
+    align-items: center;
+    cursor: pointer;
+    color: #394a56;
+}
+
+.label-text {
+    margin-left: 16px;
+}
+
+.toggle {
+    isolation: isolate;
+    position: relative;
+    height: 20px;
+    width: 40px;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: -8px -4px 8px 0px #ffffff, 8px 4px 12px 0px #d1d9e6, 4px 4px 4px 0px #d1d9e6 inset, -4px -4px 4px 0px #ffffff inset;
+}
+
+.toggle-state {
+    display: none;
+}
+
+.indicator {
+    height: 100%;
+    width: 200%;
+    background: #ecf0f3;
+    border-radius: 15px;
+    transform: translate3d(-75%, 0, 0);
+    transition: transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
+    box-shadow: -8px -4px 8px 0px #ffffff, 8px 4px 12px 0px #d1d9e6;
+}
+
+.toggle-state:checked~.indicator {
+    transform: translate3d(25%, 0, 0);
+}
+
+.cardMap {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    height: 600px;
+    margin: 10px 0;
+}
+
+.cardSearch {
+    background-color: #007221;
+    width: 49%;
+    height: 302px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.infoCardSearch {
+    display: flex;
+    align-items: center;
+    width: 50%;
+}
+
+.nomCard {
+    margin-left: 30px;
+    width: 100%;
+}
+
+.nomCard p {
+    width: 100%;
+    padding: 6px 0;
+}
+
+.contentCardSearch {
+    display: flex;
+    align-items: center;
+}
+
+.btnInfo {
+    display: flex;
+    justify-content: space-between;
+}
+
+.rightInfoCard {
+    display: flex;
+    justify-content: space-between;
+    width: 60%;
+}
+
+.btnInfo a, .btnInfo p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.voirPlus {
+    width: 124px;
+    height: 38px;
+    background: #FFFFFF;
+    border: 0.5px solid #000000;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+
+.phoneCard {
+    width: 49px;
+    height: 38px;
+    background: var(--violet-light);
+    border-radius: 10px;
+}
+
+.phoneCard i {
+    color: var(--white);
+}
+
+.sendCard {
+    height: 38px;
+    background: #FFFFFF;
+    border: 1px solid var(--violet-light);
+    box-sizing: border-box;
+    border-radius: 10px;
+    padding: 0 10px;
+    color: var(--violet-light);
+}
+
+.sendCard i {
+    margin-right: 10px;
+    color: var(--red);
+}
+
+.map {
+    width: 49%;
+    background-color: #0072b1;
+    border-radius: 10px;
+    /* height: 100%; */
+}
+
+/* MAP */
