fix input content

--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -1,84 +1,4 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
@@ -87,20 +7,9 @@ video {
     vertical-align: baseline;
 }
 
-
 /* HTML5 display-role reset for older browsers */
 
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
     display: block;
 }
 
@@ -108,20 +17,15 @@ body {
     line-height: 1;
 }
 
-ol,
-ul {
+ol, ul {
     list-style: none;
 }
 
-blockquote,
-q {
+blockquote, q {
     quotes: none;
 }
 
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
+blockquote:before, blockquote:after, q:before, q:after {
     content: '';
     content: none;
 }
@@ -131,12 +35,9 @@ table {
     border-spacing: 0;
 }
 
-*,
- :after,
- :before {
+*, :after, :before {
     box-sizing: border-box;
 }
-
 
 /* Commun CSS */
 
@@ -168,8 +69,7 @@ a {
     text-decoration: none;
 }
 
-html,
-body {
+html, body {
     /* font-size: 1em; */
     font-family: 'Montserrat', sans-serif;
     height: 100%;
@@ -184,11 +84,9 @@ body {
     margin-bottom: -50px;
 }
 
-
 /* Sticky footer   ---->    https://la-cascade.io/sticky-footer-de-5-facons/ */
 
-.footer,
-.push {
+.footer, .push {
     height: 50px;
 }
 
@@ -272,20 +170,16 @@ i {
     color: var(--violet-light);
 }
 
-
 input:focus, textarea:focus, select:focus, button:focus {
     outline: none;
 }
 
-
 /* End Commun CSS */
-
 
 /* Header */
 
 header {
     width: 100%;
-    
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -335,9 +229,7 @@ header {
     display: flex;
 }
 
-
 /* END HEADER */
-
 
 /* FOOTER ================================================ */
 
@@ -387,9 +279,7 @@ header {
     color: #0072b1!important;
 }
 
-
 /* END FOOTER */
-
 
 /* START SECTION BANNER */
 
@@ -451,14 +341,14 @@ header {
     margin-top: 25px;
 }
 
-.inputSelect input,
-.inputSelect select {
+.inputSelect input, .inputSelect #selectMode {
     background-color: var(--pink-light);
     padding: 10px 10px;
     border-radius: 5px;
     width: 40%;
     border: none;
     font-size: 20px;
+    height: 45px;
 }
 
 .inputSelect input#submitted {
@@ -470,9 +360,7 @@ header {
     cursor: pointer;
 }
 
-
 /* END SECTION BANNER */
-
 
 /* START SECTION FIRST */
 
@@ -560,7 +448,6 @@ div[class^='category-'] a {
     justify-content: space-between;
 }
 
-
 /* .txtCat {
     width: 60%;
 } */
@@ -633,7 +520,6 @@ div.hideCategory {
     width: 20%;
 }
 
-
 /* #garde i {
     color: var(--green);
 }
@@ -644,15 +530,11 @@ div.hideCategory {
     color: var(--blue-btn);
 } */
 
-
 /* END SECTION FIRST */
-
 
 /* START SECTION SECOND */
 
-
 /*  SECTION SECOND */
-
 
 /* START SECTION THIRD */
 
@@ -732,7 +614,6 @@ div.hideCategory {
     cursor: pointer;
 }
 
-
 /*  SECTION THIRD */
 
 /* Pro SECTION BANNER */
@@ -764,12 +645,9 @@ div.hideCategory {
     flex-direction: column;
 }
 
-#visibility i,
-#garde i,
-.txtCat .fa-link {
+#visibility i, #garde i, .txtCat .fa-link {
     color: var(--green);
 }
-
 
 #boost i, #reseaux i {
     color: var(--red);
@@ -783,8 +661,6 @@ div.hideCategory {
     color: var(--violet-light);
 }
 
-
-
 /* Pro SECTION BANNER */
 
 /* MAP */
@@ -793,7 +669,6 @@ div.hideCategory {
     height: 400px;
     width: 50%;
 } */
-
 
 /* END MAP */
 
@@ -825,7 +700,6 @@ h2 {
     padding-left: 20px;
     padding-right: 20px;
 }
-
 
 /* MODAL */
 
@@ -933,8 +807,7 @@ h2 {
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
-.mb-3,
-.my-3 {
+.mb-3, .my-3 {
     margin-bottom: 1rem!important;
 }
 
@@ -962,9 +835,7 @@ h2 {
     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
-.btn-secondary,
-.btn-secondary a,
-.dg-btn--ok {
+.btn-secondary, .btn-secondary a, .dg-btn--ok {
     color: var(--white-light);
     background-color: #ff8a6d;
     border-color: #ff8a6d;
@@ -981,8 +852,7 @@ h2 {
     justify-content: flex-end!important;
 }
 
-.mt-3,
-.my-3 {
+.mt-3, .my-3 {
     margin-top: 1rem!important;
 }
 
@@ -996,8 +866,7 @@ h2 {
     text-align: center!important;
 }
 
-.pt-3,
-.py-3 {
+.pt-3, .py-3 {
     padding-top: 1rem!important;
 }
 
@@ -1026,18 +895,15 @@ h2 {
     border-radius: 0.3rem;
 }
 
-.mb-2,
-.my-2 {
+.mb-2, .my-2 {
     margin-bottom: .5rem!important;
 }
 
-.pt-4,
-.py-4 {
+.pt-4, .py-4 {
     padding-top: 1.5rem!important;
 }
 
-.pb-4,
-.py-4 {
+.pb-4, .py-4 {
     padding-bottom: 1.5rem!important;
 }
 
@@ -1053,14 +919,12 @@ h2 {
     position: relative;
 }
 
-.small,
-small {
+.small, small {
     font-size: 80%;
     font-weight: 400;
 }
 
-.h4,
-h4 {
+.h4, h4 {
     font-size: 1.35rem;
 }
 
@@ -1085,8 +949,7 @@ h4 {
     border-color: #ff8a6d;
 }
 
-.btn-group-sm>.btn,
-.btn-sm {
+.btn-group-sm>.btn, .btn-sm {
     padding: .25rem .7rem;
     font-size: .7875rem;
     line-height: 1.5;
@@ -1101,26 +964,29 @@ h4 {
     display: none;
 }
 
-
-
 /* FORMULAIRE CONTACT==============================*/
-.fourth{
+
+.fourth {
     height: 100%;
     padding: 50px 30px;
     position: relative;
 }
-.img-vector{
+
+.img-vector {
     position: absolute;
     z-index: 0;
 }
-.img-vector-top{
+
+.img-vector-top {
     top: 0;
     left: 0;
 }
-.img-vector-bottom{
+
+.img-vector-bottom {
     bottom: 0;
     right: 0;
 }
+
 .wrap-sheet {
     display: flex;
     justify-content: center;
@@ -1130,14 +996,15 @@ h4 {
     z-index: 1;
 }
 
-#sheet{
+#sheet {
     background-color: var(--white);
     width: 90%;
     box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.25);
     padding: 20px 20px;
     border-radius: 10px;
 }
-.sheet-two{
+
+.sheet-two {
     background-color: var(--white);
     width: 80%;
     position: relative;
@@ -1148,27 +1015,30 @@ h4 {
     border-radius: 10px;
 }
 
-.contact-title{
+.contact-title {
     font-size: 1.5625em;
     font-weight: 500;
     line-height: 30px;
 }
+
 .contact-para {
     font-size: 1.375em;
     line-height: 27px;
     text-align: center;
     margin: 20px 0 50px;
 }
-#formcontact{
+
+#formcontact {
     padding: 10px;
 }
-label {
+
+#formcontact label {
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
 }
 
-input {
+#formcontact input {
     width: 100%;
     height: 44px;
     background: #FFFFFF;
@@ -1178,7 +1048,7 @@ input {
     margin-bottom: 20px;
 }
 
-textarea {
+#formcontact textarea {
     width: 100%;
     height: 150px;
     background: #FFFFFF;
@@ -1196,7 +1066,7 @@ textarea {
     font-size: 15px;
 }
 
- input[type="submit"] {
+#formcontact input[type="submit"] {
     width: 200px;
     font-weight: 600;
     cursor: pointer;
@@ -1206,12 +1076,14 @@ textarea {
     border: none;
     border-radius: 10px;
     box-shadow: none;
-} 
-input[type="submit"]:hover{
+}
+
+#formcontact input[type="submit"]:hover {
     transform: scale(1.1);
     transition: .5s;
 }
-.submitButtonContact{
+
+#formcontact .submitButtonContact {
     text-align: center;
 }
 
@@ -1246,7 +1118,6 @@ input[type="submit"]:hover{
 }
 
 /* SECTION MENTIONS */
-
 
 /* DASHBOARD PARENTS */
 
@@ -1502,4 +1373,3 @@ input[type="submit"]:hover{
 }
 
 /* MAP */
-
