--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -94,13 +94,10 @@ html, body {
     width: 6px;
 }
 
-::-webkit-scrollbar-track {
+/* ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
+} */
 
-::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
 
 .btn {
     width: 200px;
@@ -1105,7 +1102,7 @@ h2 {
 
 #mentions p {
     font-weight: 400;
-    font-size: ;
+    /* font-size: ; */
 }
 
 #mentions a {
@@ -1371,5 +1368,13 @@ h2 {
     border-radius: 10px;
     /* height: 100%; */
 }
-
+#map{
+    height: 600px;
+    width:600px;
+}
+#name{
+    display:none;
+}
 /* MAP */
+
+
