--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -1375,7 +1375,7 @@ h2 {
 /* MAP */
 
 
-/* DASH */
+/* DASH PARENTS */
 .dash-text{
     font-size: 25px;
     line-height: 30px;
@@ -1403,25 +1403,6 @@ h2 {
     display: flex;
     justify-content: center;
 }
-.pp-size{
-    width: 150px;
-}
-.ppmail{
-    margin: 10px 0;
-}
-.btnprofil{
-    width: 151px;
-    font-weight: 300;
-    font-size: 16px;
-    line-height: 20px;
-    color: var(--black);
-    text-align: center;
-    background: #FFFFFF;
-    border: 1px solid #FF69FF;
-    box-sizing: border-box;
-    border-radius: 10px;
-    padding: 10px;
-}
 .pp{
     display: flex;
     flex-direction: column;
@@ -1431,3 +1412,71 @@ h2 {
     left: 146px;
     z-index: 2;
 }
+.pp-size{
+    width: 150px;
+}
+.ppmail{
+    margin-top: 15px;
+}
+.btnprofil{
+    width: 151px;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 20px;
+    color: var(--black);
+    text-align: center;
+    background: #FFFFFF;
+    border: 1px solid var(--violet-light);
+    box-sizing: border-box;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 15px;
+}
+.btnprofil:hover{
+    color: var(--white);
+    /* font-weight: bold; */
+    background-color: var(--violet-light);
+    transition: 1s;
+}
+
+/* DASH PARENTS */
+
+/* DASH PROS */
+
+.dashboardPros {
+    height: 100vh;
+}
+
+.headPros {
+    height: 288px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+}
+
+.headPros img {
+    position: absolute;
+    width: 100%;
+    height: 70px;
+    text-align: center;
+    top: 0px;
+}
+.btnPros {
+    align-items: center;
+    margin: 0 auto;
+}
+
+.dash-pros-titre{
+    position: relative;
+}
+
+.btnprofil1{
+    border: 1px solid var(--blue-btn);
+}
+
+.btnprofil1:hover{
+    background-color: var(--blue-btn);
+}
+/* DASH PROS */
+
