--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -1680,3 +1680,91 @@ h2 {
 }
 /* DASH PROS */
 
+/* PROFIL PARENTS ====================================================*/
+/* HEADER PROFIL PARENTS */
+.profilParents{
+    width: 100%;
+}
+.headprofil{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.profil-text{
+    text-transform: uppercase;
+}
+
+.btnmodif{
+    width: 13%;
+    font-size: .7875rem;
+    line-height: 1.5;
+    font-weight: bold;
+    padding: 5px 10px;
+    color: var(--white);
+    background-color: var(--violet-light);
+    border: none;
+    transition: all .6s ease-in-out;
+}
+.btnmodif:hover{
+    background-color: var(--violet);
+}
+.fa-image{
+    color: var(--white)!important;
+    margin-right: 5px;
+}
+/* BODY PROFIL PARENTS */
+
+.formProfil{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: #F2F2F2;
+}
+#formprofil{
+    margin: 20px 0;
+}
+
+.inputprofil{
+    border-radius: 10px;
+    padding: 10px 10px;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    margin-bottom: 20px;
+}
+
+#formprofil input{
+    width: 100%;
+    margin-top: 10px;
+}
+.form-group{
+    display: flex;
+    justify-content: space-between;
+}
+
+.inputname{
+    margin-right: 20px;
+}
+
+.buttonprofil{
+    border-radius: 10px;
+    border: none;
+    color: var(--white);
+    /* width: 100%; */
+    padding: 10px;
+    cursor: pointer;
+}
+#enregistrer{
+    background-color: var(--violet-light);
+    margin-bottom: 10px;
+}
+#enregistrer:hover{
+    background-color: var(--violet);
+}
+#supprimer{
+    background-color: #8882ff;
+}
+#supprimer:hover{
+    background-color: var(--blue-btn);
+}
+/* PROFIL PARENTS */
