--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -1689,6 +1689,7 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 20px;
 }
 .profil-text{
     text-transform: uppercase;
