--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -1769,7 +1769,13 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
+}
+
+.border {
+    width: 100%;
+    height: 70px;
+    text-align: center;
+    top: 0px;
 }
 .profil-text{
     text-transform: uppercase;
