--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -281,7 +281,7 @@ header {
 /* FOOTER ================================================ */
 
 .footer-container {
-    padding: 50px 0 50px 0;
+    padding: 10px 0 10px 0;
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -1243,7 +1243,7 @@ h2 {
     margin-bottom: 10px;
 }
 
-.boxHead input, button {
+.boxHead input, .boxHead button {
     width: 225px;
     height: 45px;
     background: #FFFFFF;
@@ -1384,13 +1384,14 @@ h2 {
     width: 60%;
 }
 
-.btnInfo a, .btnInfo p {
+.btnInfo label.voirPlus, .btnInfo p, .btnInfo a {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .voirPlus {
+    cursor: pointer;
     width: 124px;
     height: 38px;
     background: #FFFFFF;
@@ -1419,6 +1420,12 @@ h2 {
     padding: 0 10px;
     color: var(--violet-light);
 }
+.sendCard:hover {
+    color: var(--white);
+    /* font-weight: bold; */
+    background-color: var(--violet-light);
+    transition: 1s;
+}
 
 .sendCard i {
     margin-right: 10px;
@@ -1429,6 +1436,8 @@ h2 {
     width: 50%;
     height: 600px;
     border-radius: 10px;
+    position: relative;
+    z-index: 2;
 }
 
 #name {
@@ -1538,7 +1547,7 @@ h2 {
     .partnerTitle {
         width: 95%;
         margin: 0 auto;
-    } 
+    }
 }
 
 @media screen and (max-width: 800px) {
@@ -1625,6 +1634,7 @@ h2 {
         width: 100%;
     }
 }
+
 @media screen and (max-width: 400px) {
     .sendCard {
         height: auto;
@@ -1643,7 +1653,7 @@ h2 {
     }
     #map {
         width: 100%;
-    }    
+    }
     .label {
         display: none;
     }
@@ -1651,19 +1661,19 @@ h2 {
 
 /* RESPONSIVE */
 
-
 /* MAP */
 
-
 /* DASH PARENTS */
-.dash-text{
+
+.dash-text {
     font-size: 25px;
     line-height: 30px;
     text-align: center;
     margin-top: 50px;
     margin-bottom: 50px;
 }
-.dash-sheet{
+
+.dash-sheet {
     width: 50%;
     height: 90%;
     margin-top: 30px;
@@ -1673,17 +1683,20 @@ h2 {
     border-radius: 10px;
     position: absolute;
 }
-.sheet-dash{
+
+.sheet-dash {
     width: 100%;
     height: 70%;
     position: relative;
     background-color: #F2F2F2;
 }
-.sheet-wrap{
+
+.sheet-wrap {
     display: flex;
     justify-content: center;
 }
-.pp{
+
+.pp {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1692,13 +1705,16 @@ h2 {
     left: 146px;
     z-index: 2;
 }
-.pp-size{
+
+.pp-size {
     width: 150px;
 }
-.ppmail{
+
+.ppmail {
     margin-top: 15px;
 }
-.btnprofil{
+
+.btnprofil {
     width: 151px;
     font-weight: 300;
     font-size: 16px;
@@ -1712,7 +1728,8 @@ h2 {
     padding: 10px;
     margin-top: 15px;
 }
-.btnprofil:hover{
+
+.btnprofil:hover {
     color: var(--white);
     /* font-weight: bold; */
     background-color: var(--violet-light);
@@ -1742,21 +1759,84 @@ h2 {
     text-align: center;
     top: 0px;
 }
+
 .btnPros {
     align-items: center;
     margin: 0 auto;
 }
 
-.dash-pros-titre{
+.dash-pros-titre {
     position: relative;
 }
 
-.btnprofil1{
+.btnprofil1 {
     border: 1px solid var(--blue-btn);
 }
 
-.btnprofil1:hover{
+.btnprofil1:hover {
     background-color: var(--blue-btn);
 }
+
 /* DASH PROS */
 
+.modalProfil {
+    display: none;
+    width: 410px;
+    max-height: 80%;
+    padding: 30px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 100;
+    background-color: #fff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 30px;
+}
+
+.contentCardSearchProfil {
+    height: 150px;
+    overflow-y: scroll;
+}
+
+#show:checked~.modalProfil {
+    display: block;
+}
+
+input[type="checkbox"] {
+    display: none;
+}
+
+.txtModalProfil {
+    text-align: center;
+}
+
+.fa-times {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.infoCardSearchProfil {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* padding: 30px 0 0 0; */
+    line-height: 30px;
+}
+
+.infoCardSearchProfil .nomCard {
+    margin-left: 0px;
+}
+
+.btnCardProfil {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    padding: 50px 0 0 0;
+}
+
+.modalProfil h1, .infoCardSearchProfil h2, .infoCardSearchProfil h3 {
+    margin: 10px auto;
+}
