--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -213,9 +213,9 @@ h3 {
     font-size: 20px;
 }
 
-i {
+/* i {
     color: var(--violet-light);
-}
+} */
 
 input:focus, textarea:focus, select:focus, button:focus {
     outline: none;
@@ -1097,20 +1097,19 @@ h2 {
 
 #formcontact textarea {
     width: 100%;
-    height: 150px;
     background: #FFFFFF;
     border: 1px solid rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
     border-radius: 10px;
     margin-bottom: 30px;
     resize: none;
-    text-align: center;
+    padding: 10px 15px;
     outline: none;
     -webkit-transition: 0.7s;
     -o-transition: 0.7s;
     transition: 0.7s;
     height: 200px;
-    font-size: 15px;
+    font-size: 17px;
 }
 
 #formcontact input[type="submit"] {
@@ -1810,7 +1809,22 @@ h2 {
 #formprofilparents, #formprofilpros{
     margin: 20px 0;
 }
-
+#formprofilparents textarea, #formprofilpros textarea{
+    width: 100%;
+    height: 150px;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    padding: 10px 15px;
+    resize: none;
+    outline: none;
+    -webkit-transition: 0.7s;
+    -o-transition: 0.7s;
+    transition: 0.7s;
+    font-size: 15px;
+}
 .inputprofil{
     border-radius: 10px;
     padding: 10px 10px;
